waybar: change workspace 8 icon, fix firmware icon spacing

--- a/.config/waybar/style__.css
+++ b/.config/waybar/style__.css
@@ -42,6 +42,10 @@ scale.module highlight {
   color: #"!{shell_light}!";
 }
 
+#custom-updates_firmware {
+  padding-left: 0;
+}
+
 /* items with bg  */
 #workspaces button.active,
 #window,
